lintian (2.5.10) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - incompatible-java-bytecode-format
      - unknown-java-class-version

  * checks/changes-file.desc:
    + [NT] Fix typo in tag description.  Thanks to Luca
      Falavigna for spotting it.
  * checks/java{,.desc}:
    + [NT] Catch unknown Java class versions.
    + [NT] Catch uses of Java7 byte code as an experimental
      check.  It lacks the proper checks for cases where
      packages have the proper dependencies for Java7 byte
      code.  (Closes: #673276)

  * collection/java-info{,.desc}:
    + [NT] Use Archive::Zip instead of zipinfo + unzip to
      extract information from Jar files.
    + [NT] Limit java-info to files classified as "Zip Archive"
      by file(1).
  * collection/objdump-info:
    + [NT] Only call readelf once per binary.
    + [NT] Use xargs + a new helper to reduce the number of
      readelf calls even further.
  * collection/objdump-info-helper:
    + [NT] New file.
  * collection/strings:
    + [NT] Optimize for the "common case" file names with a
      fall-back to previous behaviour with special file names.
  * collection/strings-helper:
    + [NT] New file.

  * debian/control:
    + [NT] Add (Build-)Dependency on libarchive-zip-perl.
    + [NT] Remove runtime dependency on unzip (replaced by
      libarchive-zip-perl).
    + [NT] Add explicit Build-Dependency on xz-utils instead
      of relying on dpkg-dev's dependency on it.
    + [NT] Add versioned xz-utils as alternative to xz-lzma
      or lzma.  (Closes: #678775)
    + [NT] Add missing suggests for lzma packages.  lzma is
      only used for source packages compressed with lzma.

  * frontend/lintian:
    + [NT] Check if some collections can be skipped for existing
      entries.  This is mostly useful for static labs, where
      certain checks can be now be rerun without having to run
      "unpacked".
    + [NT] Emit run times of collections and checks with debug