@@ -87,6 +87,7 @@ Depends: binutils,
 Suggests: binutils-multiarch,
           dpkg-dev,
           libhtml-parser-perl,
+          libperlio-gzip-perl,
           libtext-template-perl,
           lzma,
           man-db (>= 2.5.1-1),
