@@ -8,6 +8,8 @@ lintian (2.5.10) UNRELEASED; urgency=low
   * checks/changes-file.desc:
     + [NT] Fix typo in tag description.  Thanks to Luca
       Falavigna for spotting it.
+  * checks/files:
+    + [NT] Use new gzip decompressor from L::Util.
   * checks/java{,.desc}:
     + [NT] Catch unknown Java class versions.
     + [NT] Catch uses of Java7 byte code as an experimental
@@ -42,6 +44,7 @@ lintian (2.5.10) UNRELEASED; urgency=low
       or lzma.  (Closes: #678775)
     + [NT] Add missing suggests for lzma packages.  lzma is
       only used for source packages compressed with lzma.
+    + [NT] Add suggests on libperlio-gzip-perl.
 
   * frontend/lintian:
     + [NT] Check if some collections can be skipped for existing
@@ -52,8 +55,13 @@ lintian (2.5.10) UNRELEASED; urgency=low
       level 2 (or higher).
     + [NT] Load lintian's libraries earlier.
 
+  * lib/Lintian/Collect/[Binary,Package}.pm:
+    + [NT] Use new gzip decompressor from L::Util.
   * lib/Lintian/CollScript.pm:
     + [NT] New file.
+  * lib/Lintian/Util.pm:
+    + [NT] Add gzip decompressor preferring libperlio-perl if
+      available, but with fallback to a "fork+exec" of gzip.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Jun 2012 23:25:06 +0200
 
